--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,2 @@
 public net.minecraft.client.renderer.entity.EntityRenderer field_76989_e #shadowSize
+public net.minecraft.entity.ai.goal.GoalSelector field_220892_d #goals
