--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,4 @@
 public net.minecraft.client.renderer.entity.EntityRenderer field_76989_e #shadowSize
 public net.minecraft.entity.ai.goal.GoalSelector field_220892_d #goals
 public-f net.minecraft.entity.EntityType field_220359_bi #size
+public-f net.minecraft.entity.ai.goal.FollowMobGoal field_192373_b #followPredicate
